# promptdesk-py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/promptdesk/: JSONMapper.py  __init__.py  chain.py  client.py  util.py
tests/: test_errors.py  test_initial.py
tests/test_files/: test_Anthropic_claude-2.1_chat.json  test_Anthropic_claude-2.1_completion.json  test_Cohere_command_chat.json  test_Cohere_command_completion.json  test_Google_gemini-pro_completion.json  test_HuggingFace_gpt-2_completion.json  test_Mistrial_mistral-medium_chat.json  test_Mistrial_mistral-medium_completion.json  test_OpenAI_gpt-3.5-turbo_chat.json  test_OpenAI_gpt-3.5-turbo_completion.json
