[tool.poetry]
name = "promptdesk"
version = "0.2.4"
description = "PromptDesk python SDK."
authors = ["PromptDesk <feedback@promptdesk.ai>"]
license = "AGPLv3"
readme = "README.md"
homepage = "https://promptdesk.ai/"
repository = "https://github.com/promptdesk/promptdesk-py"
documentation = "https://promptdesk.ai/docs"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
cachetools = "^5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]